portainer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer
  labels:
    app: portainer
spec:
  selector:
    matchLabels:
      app: portainer
  template:
    metadata:
      labels:
        app: portainer
    spec:
      containers:
      - name: portainer
        image: portainer/portainer:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
          name: http
        resources:
          limits:
            memory: "32Mi"
            cpu: "100m"
        volumeMounts:
          - mountPath: /data
            name: portainer-volume
          - mountPath: /var/run/docker.sock
            name: docker-socket
      volumes:
        - name: portainer-volume
          emptyDir: {}
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
            type: Socket
